fix(spin-java-module): match the CDS dump module set on GraalVM images